--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -189,19 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "distro\n",
-      "False\n",
-      "[['mix' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['exp' '1000' 'const']]\n",
+      "data_sequence\n",
+      "True\n",
+      "[['gau_1' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']]\n",
       "get_q_est stepsize is const\n",
       "get_procs() using method p2\n",
       "p2\n",
@@ -233,17 +231,11 @@
       "get_procs() using method p2\n",
       "p2\n",
       "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/distro/mix_q_true.txt\n",
-      "Experiment_results/P2/distro/mix_q_batches.txt\n",
-      "Experiment_results/P2/distro/mix_q_est_res.txt\n",
-      "Experiment_results/P2/distro/mix_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/mix_E.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_est_proc.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_E.txt\n",
       "get_q_est stepsize is const\n",
       "get_procs() using method p2\n",
       "p2\n",
@@ -275,244 +267,11 @@
       "get_procs() using method p2\n",
       "p2\n",
       "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/distro/gau_1_q_true.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_batches.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_est_res.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/gau_1_E.txt\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/distro/gau_2_q_true.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_batches.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_est_res.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/gau_2_E.txt\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/distro/exp_q_true.txt\n",
-      "Experiment_results/P2/distro/exp_q_batches.txt\n",
-      "Experiment_results/P2/distro/exp_q_est_res.txt\n",
-      "Experiment_results/P2/distro/exp_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/exp_E.txt\n",
-      "data_size\n",
-      "False\n",
-      "[['gau_2' '100' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['gau_2' '10000' 'const']]\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
-      "Experiment_results/P2/data_size/100_q_true.txt\n",
-      "Experiment_results/P2/data_size/100_q_batches.txt\n",
-      "Experiment_results/P2/data_size/100_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/100_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/100_E.txt\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/data_size/1000_q_true.txt\n",
-      "Experiment_results/P2/data_size/1000_q_batches.txt\n",
-      "Experiment_results/P2/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/1000_E.txt\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "Experiment_results/P2/data_size/10000_q_true.txt\n",
-      "Experiment_results/P2/data_size/10000_q_batches.txt\n",
-      "Experiment_results/P2/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/10000_E.txt\n"
+      "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_q_est_proc.txt\n",
+      "Experiment_results/P2/data_sequence/shuffle_E.txt\n"
      ]
     }
    ],
@@ -520,7 +279,7 @@
     "# Run all functions\n",
     "\n",
     "main_folder = 'P2'\n",
-    "compare_lst = ['distro', 'data_size']\n",
+    "compare_lst = ['data_sequence']\n",
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['P2'], \n",
     "                       sub_fd_lst = ['P2/'], subsub_fd_lst = compare_lst)\n",
     "all_method_comparisons(compare_lst, main_folder)"
@@ -579,27 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment_results/P2/distro/gau_1_\n",
-      "Experiment_results/P2/distro/mix_\n",
-      "Experiment_results/P2/distro/gau_2_\n",
-      "Experiment_results/P2/distro/exp_\n",
-      "Experiment_results/P2/data_size/100_\n",
-      "Experiment_results/P2/data_size/10000_\n",
-      "Experiment_results/P2/data_size/1000_\n"
+      "Experiment_results/P2/data_sequence/shuffle_\n"
      ]
     }
    ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/P2/\")"
+    "plot_charts(\"Experiment_results/P2/data_sequence\")"
    ]
   },
   {
