Fixed: 1. The switch statement for methods in Quantile_procs.py; 2. The qlable in plots

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -11,17 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
@@ -60,19 +50,19 @@
    "outputs": [],
    "source": [
     "# Get quantile estimates\n",
-    "def get_q_ests(dataset, stepsize, tau_lst):\n",
-    "    print (\"get_q_est stepsize is {}\".format(stepsize))\n",
+    "def get_q_ests(dataset, tau_lst, method_name, stepsize):\n",
+    "    print (\"get_q_ests using method_name {}\".format(method_name))\n",
     "    if len(dataset.shape)>2:\n",
     "        raise Exception('Dataset for q_est calculation of wrong shape: {}, should be 1d or 2d array'\n",
     "                        .format(str(dataset.shape)))\n",
     "    if len(dataset.shape)==1:\n",
-    "        procs = get_procs(dataset, tau_lst, method_name='p2', stepsize=stepsize)\n",
+    "        procs = get_procs(dataset, tau_lst, method_name, stepsize=stepsize)\n",
     "        res = get_res(procs)\n",
     "    else:\n",
     "        res = np.zeros((dataset.shape[0], len(tau_lst)))\n",
     "        procs = np.zeros((dataset.shape[0], len(tau_lst), dataset.shape[1]))\n",
     "        for idx, dt in enumerate(dataset):\n",
-    "            procs[idx] = get_procs(dt, tau_lst, method_name='p2', stepsize=stepsize)\n",
+    "            procs[idx] = get_procs(dt, tau_lst, method_name, stepsize=stepsize)\n",
     "            res[idx] = get_res(procs[idx])\n",
     "    return res, procs"
    ]
@@ -104,6 +94,7 @@
    "source": [
     "def quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
     "                         g_test=False, s_test=False, tau_lst=[0.1, 0.3, 0.5, 0.9, 0.99], \n",
+    "                        method_name='SGD',\n",
     "                        ):\n",
     "    \n",
     "    if g_test and s_test: raise Exception(\"g_test and s_test can't both be true\")\n",
@@ -129,7 +120,7 @@
     "            q_batches = get_q_batches(dataset, tau_lst)\n",
     "        if s_test: \n",
     "            dataset = get_shuffled_dataset(dataset, datasize, s_test)\n",
-    "        q_est_res, q_est_proc = get_q_ests(dataset, stepsize, tau_lst)\n",
+    "        q_est_res, q_est_proc = get_q_ests(dataset, tau_lst, method_name, stepsize)\n",
     "        E = get_normalized_e(q_true, q_batches, q_est_res)\n",
     "        \n",
     "        data_dict = {\n",
@@ -141,7 +132,7 @@
     "        }\n",
     "        # generate charts and tables?\n",
     "        file_name = get_file_name(changed_setting, distro, datasize, stepsize, s_test)\n",
-    "        save_data(folder_name, file_name, tau_lst, data_dict)"
+    "        save_data(folder_name, file_name, tau_lst, data_dict, method_name)"
    ]
   },
   {
@@ -170,7 +161,7 @@
     "        tau_lst = tau_vals\n",
     "        print (s_test)\n",
     "        \n",
-    "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst)\n",
+    "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst, method_name=root_folder)\n",
     "            "
    ]
   },
@@ -196,77 +187,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "distro\n",
+      "False\n",
+      "[['mix' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['exp' '1000' 'const']]\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/distro/mix_q_true.txt\n",
+      "Experiment_results/P2/distro/mix_q_batches.txt\n",
+      "Experiment_results/P2/distro/mix_q_est_res.txt\n",
+      "Experiment_results/P2/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/mix_E.txt\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/distro/gau_1_q_true.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/P2/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/gau_1_E.txt\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/distro/gau_2_q_true.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/P2/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/gau_2_E.txt\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/distro/exp_q_true.txt\n",
+      "Experiment_results/P2/distro/exp_q_batches.txt\n",
+      "Experiment_results/P2/distro/exp_q_est_res.txt\n",
+      "Experiment_results/P2/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/P2/distro/exp_E.txt\n",
+      "data_size\n",
+      "False\n",
+      "[['gau_2' '100' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['gau_2' '10000' 'const']]\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/data_size/100_q_true.txt\n",
+      "Experiment_results/P2/data_size/100_q_batches.txt\n",
+      "Experiment_results/P2/data_size/100_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/100_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/100_E.txt\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/data_size/1000_q_true.txt\n",
+      "Experiment_results/P2/data_size/1000_q_batches.txt\n",
+      "Experiment_results/P2/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/1000_E.txt\n",
+      "get_q_ests using method_name P2\n",
+      "Experiment_results/P2/data_size/10000_q_true.txt\n",
+      "Experiment_results/P2/data_size/10000_q_batches.txt\n",
+      "Experiment_results/P2/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/P2/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/P2/data_size/10000_E.txt\n",
       "data_sequence\n",
       "True\n",
       "[['gau_1' '1000' 'const']\n",
       " ['gau_1' '1000' 'const']]\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
+      "get_q_ests using method_name P2\n",
       "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_q_est_proc.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_E.txt\n",
-      "get_q_est stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
-      "get_procs() using method p2\n",
-      "p2\n",
-      "stepsize is const\n",
+      "get_q_ests using method_name P2\n",
       "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
       "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
@@ -277,11 +261,11 @@
    ],
    "source": [
     "# Run all functions\n",
-    "\n",
+    "Folder_options = ['SGD', 'Frugal', 'Adaptive', 'P2']\n",
     "main_folder = 'P2'\n",
-    "compare_lst = ['data_sequence']\n",
-    "initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['P2'], \n",
-    "                       sub_fd_lst = ['P2/'], subsub_fd_lst = compare_lst)\n",
+    "compare_lst = ['distro', 'data_size', 'data_sequence']\n",
+    "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
+    "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = compare_lst)\n",
     "all_method_comparisons(compare_lst, main_folder)"
    ]
   },
@@ -338,21 +322,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment_results/P2/data_sequence/shuffle_\n"
+      "Experiment_results/P2/distro/gau_1_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/mix_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/gau_2_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/exp_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n"
      ]
     }
    ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/P2/data_sequence\")"
+    "plot_charts(\"Experiment_results/P2/distro\")"
    ]
   },
   {
