P2 algorithm part basically finished (1 page), but still need the parabolic & linear formula

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -655,6 +655,22 @@
   number = {SAND2008-6212, 1028931}
 }
 
+@article{raatikainenSimultaneousEstimationSeveral1987,
+  title = {Simultaneous Estimation of Several Percentiles},
+  author = {Raatikainen, Kimmo E. E.},
+  year = {1987},
+  month = oct,
+  volume = {49},
+  pages = {159--163},
+  publisher = {{SAGE Publications Ltd STM}},
+  issn = {0037-5497},
+  doi = {10.1177/003754978704900405},
+  abstract = {In many simulation studies the performance of the modeled system is characterized only by mean values of the performance indices. However, the percentiles are more informative in sum marizing the performance. Several simultaneous percentiles, pre sented for example in the form of the boxplot, provide the analyst with better understanding of the system's behaviour.The simultaneous estimation of several percentiles is a cumber some task. The extended P2-algorithm proposed in this study significantly reduces the computation of the estimation. The algorithm simultaneously estimates several percentiles without storing and sorting the observations. Empirical validation studies indicate the algorithm can be used in simulation studies.},
+  file = {/Users/sue/Zotero/storage/LP2WD3B9/Raatikainen - 1987 - Simultaneous estimation of several percentiles.pdf},
+  journal = {SIMULATION},
+  number = {4}
+}
+
 @article{ramirezX2MostComputationally2014,
   title = {X2 + \textmu{} Is the {{Most Computationally Efficient Smooth Approximation}} to |x|: A {{Proof}}},
   author = {Ramirez, Carlos and Sanchez, Reinaldo and Kreinovich, Vladik and Argaez, Miguel},
