add debug code.

--- a/Q_BAI/Test_Fixed_Budget.ipynb
+++ b/Q_BAI/Test_Fixed_Budget.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<class 'codes.Environment.Mixture_AbsGau'>: [[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1]], <class 'codes.Environment.Exp'>: [0.2857142857142857]}\n"
+      "{<class 'codes.Environment.Mixture_AbsGau'>: [[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1]], <class 'codes.Environment.Exp'>: [[0.2857142857142857]]}\n"
      ]
     }
    ],
@@ -50,17 +50,18 @@
     "num_rounds = 10000\n",
     "num_arms = 10\n",
     "est_flag = True # estimate the lower bound of hazard rate L\n",
-    "tau = 0.9 # quantile level\n",
+    "tau = 0.5 # quantile level\n",
     "\n",
     "# environment\n",
     "\n",
     "environments = [\n",
     "    {Mixture_AbsGau: [[3, 1, 0,1, 1], [1.2, 4, 0, 1, 1], \n",
-    "                      [3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
-    "                      [3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
-    "                      [3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
-    "                      [3, 1, 0,1, 1]],\n",
-    "     Exp: [1/3.5]} # mu1, sigma1, mu2, sigma2, p\n",
+    "                      #[3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
+    "                      #[3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
+    "                      #[3, 1, 0,1, 1], [1.2, 4, 0, 1, 1],\n",
+    "                      #[3, 1, 0,1, 1]\n",
+    "                     ],\n",
+    "     Exp: [[1/3.5]]} # mu1, sigma1, mu2, sigma2, p\n",
     "    \n",
     "]\n",
     "\n",
@@ -77,16 +78,9 @@
      "data": {
       "text/plain": [
        "defaultdict(list,\n",
-       "            {'Mixture_AbsGau_[[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1]]Exp_[0.2857142857142857]': [4.285365110890041,\n",
-       "              6.806551781875078,\n",
-       "              4.267796844197339,\n",
-       "              6.908504357172303,\n",
-       "              4.276253197671883,\n",
-       "              6.886688009725967,\n",
-       "              4.285903606359307,\n",
-       "              6.845199098290813,\n",
-       "              4.273981603442657,\n",
-       "              8.144235308065943]})"
+       "            {'Mixture_AbsGau_[[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1]]Exp_[[0.2857142857142857]]': [2.997123733895273,\n",
+       "              2.8182623442806425,\n",
+       "              2.440208307958459]})"
       ]
      },
      "execution_count": 3,
@@ -106,10 +100,33 @@
     {
      "data": {
       "text/plain": [
-       "\"\\n\\narm_name_dict = {\\n    0: 'A',\\n    1: 'B',\\n    2: 'C'\\n}\\n\\nfor key in quantiles.keys():\\n    print(key)\\n    quantiles[key] = list(np.around(np.array(quantiles[key]),2))\\n    means[key] = list(np.around(np.array(means[key]),2))\\n    t = PrettyTable(['Eva', 'A', 'B', 'C', 'Best Arm'])\\n    t.add_row([str(tau) + '-Quantile'] + quantiles[key]+ [arm_name_dict[np.argmax(quantiles[key])]])\\n    t.add_row(['Mean']+ means[key]+ [arm_name_dict[np.argmax(means[key])]])\\n    t.add_row(['L']+ Ls[key]+ [arm_name_dict[np.argmax(Ls[key])]])\\n    print(t)\\n    print()\\n\""
+       "defaultdict(list,\n",
+       "            {'Mixture_AbsGau_[[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1]]Exp_[[0.2857142857142857]]': [0.008863696823876015,\n",
+       "              0.19069390773026207,\n",
+       "              0.2857142857142857]})"
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\narm_name_dict = {\\n    0: 'A',\\n    1: 'B',\\n    2: 'C'\\n}\\n\\nfor key in quantiles.keys():\\n    print(key)\\n    quantiles[key] = list(np.around(np.array(quantiles[key]),2))\\n    means[key] = list(np.around(np.array(means[key]),2))\\n    t = PrettyTable(['Eva', 'A', 'B', 'C', 'Best Arm'])\\n    t.add_row([str(tau) + '-Quantile'] + quantiles[key]+ [arm_name_dict[np.argmax(quantiles[key])]])\\n    t.add_row(['Mean']+ means[key]+ [arm_name_dict[np.argmax(means[key])]])\\n    t.add_row(['L']+ Ls[key]+ [arm_name_dict[np.argmax(Ls[key])]])\\n    print(t)\\n    print()\\n\""
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,33 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "budget = 5000\n",
     "epsilon = 0.5\n",
-    "tau = 0.9\n",
     "m = 1\n",
     "num_exper = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mixture_AbsGau_[[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1], [3, 1, 0, 1, 1]]Exp_[0.2857142857142857]_100_10000Q_SAR-[1]\n"
+      "Mixture_AbsGau_[[3, 1, 0, 1, 1], [1.2, 4, 0, 1, 1]]Exp_[[0.2857142857142857]]_100_10000Q_UGapEb-[1]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46e0b5612a9c4582877d68d99f30028b",
+       "model_id": "8559350c1a6544909ff07f07d606655a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,21 +227,21 @@
    ],
    "source": [
     "hyperpara_list = [[1]]\n",
-    "error, std = run_exper(rewards_env, hyperpara_list, num_exper, budget, epsilon, tau, m, Q_SAR, quantiles)"
+    "error, std = run_exper(rewards_env, hyperpara_list, num_exper, budget, epsilon, tau, m, Q_UGapEb, quantiles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.17"
+       "0.4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.375632799419859"
+       "0.4898979485566356"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
