add baseline algs: QPAC, MaxQ, batch elimination.

--- a/Q_BAI/Q_UGapEc_20arms-new_env_group_one.ipynb
+++ b/Q_BAI/Q_UGapEc_20arms-new_env_group_one.ipynb
@@ -22,7 +22,7 @@
     "import pickle\n",
     "from prettytable import PrettyTable\n",
     "\n",
-    "from codes.Q_BAI import Q_UGapEc, QPAC\n",
+    "from codes.Q_BAI import Q_UGapEc, QPAC, MaxQ\n",
     "from codes.Environment import Mixture_AbsGau, setup_env, Exp\n",
     "from codes.SimulatedGames import simulate\n",
     "from codes.plots import plot_hist, plot_eva, plot_eva_m\n",
@@ -39,30 +39,28 @@
     "# environment\n",
     "\n",
     "environments = [\n",
-    "    {Mixture_AbsGau: [[0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],  \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],\n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],\n",
+    "    {Mixture_AbsGau: [[0, 2, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1],  \n",
     "                     ],\n",
-    "     Exp: [[1/3.6]\n",
-    "          ]\n",
+    "     Exp: [[1/3.6], [1/3.6], [1/3.6], [1/3.6]]\n",
     "    } # mu1, sigma1, mu2, sigma2, p\n",
     "    \n",
     "]\n",
     "\n",
-    "\n",
-    "tau = 0.8 # quantile level\n",
+    "tau = 0.5 # quantile level\n",
     "est_flag = False # True: estimate the lower bound of hazard rate L; False: use the true L\n",
     "\n",
     "rewards_env, quantiles, Ls, means, samples = setup_env(environments, tau)"
@@ -76,8 +74,8 @@
    "source": [
     "import pickle\n",
     "\n",
-    "#with open('group_two_samples_tau0.8_budget5000_exper100.pickle', 'rb') as handle:\n",
-    "#    fixed_samples_list = pickle.load(handle)\n",
+    "#with open('group_one_samples_tau0.5_budget5000_exper100.pickle', 'rb') as handle:\n",
+    "#     fixed_samples_list = pickle.load(handle)\n",
     "fixed_samples_list = None"
    ]
   },
@@ -119,8 +117,8 @@
     "num_arms = 16\n",
     "num_exper = 100\n",
     "confi = 0.05\n",
-    "epsilon = 0\n",
-    "hyperpara_list = [[0.0001], [0.0005, 1], [0.001]]"
+    "epsilon = 0.05\n",
+    "# hyperpara_list = [[0.001, 1], [0.005, 1], [0.01, 1]]"
    ]
   },
   {
@@ -129,9 +127,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, Q_UGapEc, quantiles, fixed_samples_list = fixed_samples_list)\n",
+    "hyperpara_list = [[1]]\n",
     "\n",
-    "# run_exper(rewards_env, hyperpara_list, num_arms, num_exper, budget, epsilon, tau, uniform_sampling, quantiles)"
+    "run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, QPAC, quantiles, fixed_samples_list = fixed_samples_list)\n",
+    "# run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, MaxQ, quantiles, fixed_samples_list = fixed_samples_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, Q_UGapEc, quantiles, fixed_samples_list = fixed_samples_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with open('Fixed_confi_20arms_new_env_group_one.pickle', 'wb') as handle:\n",
+    "#    pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -141,18 +159,6 @@
    "outputs": [],
    "source": [
     "plot_eva(results, 'sc', paper_flag = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "#with open('Fixed_budget_20arms_new_env_group_two.pickle', 'wb') as handle:\n",
-    "#    pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
