--- a/Q_BAI/Env_design.ipynb
+++ b/Q_BAI/Env_design.ipynb
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<class 'codes.Environment.Mixture_AbsGau'>: [[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1]], <class 'codes.Environment.Exp'>: [[0.2777777777777778]]}\n"
+      "{<class 'codes.Environment.Mixture_AbsGau'>: [[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1]], <class 'codes.Environment.Exp'>: [[0.25]]}\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
     "environments = [\n",
     "    {Mixture_AbsGau: [[0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
     "                     ],\n",
-    "     Exp: [[1/3.6]]\n",
+    "     Exp: [[1/4]]\n",
     "    } # mu1, sigma1, mu2, sigma2, p\n",
     "    \n",
     "]\n",
@@ -278,21 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1]]Exp_[[0.2777777777777778]]\n",
-      "+--------------+--------------------+---------------------+--------------------+----------+\n",
-      "|     Eva      |         A          |          B          |         C          | Best Arm |\n",
-      "+--------------+--------------------+---------------------+--------------------+----------+\n",
-      "| 0.8-Quantile |        1.93        |         5.18        |        5.74        |    C     |\n",
-      "|     Mean     |        1.2         |         3.56        |        3.58        |    C     |\n",
-      "|      L       | 0.5319230405352436 | 0.08627731882651153 | 0.2777777777777778 |    A     |\n",
-      "+--------------+--------------------+---------------------+--------------------+----------+\n",
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1]]Exp_[[0.25]]\n",
+      "+--------------+--------------------+---------------------+------+----------+\n",
+      "|     Eva      |         A          |          B          |  C   | Best Arm |\n",
+      "+--------------+--------------------+---------------------+------+----------+\n",
+      "| 0.8-Quantile |        1.92        |         5.18        | 6.42 |    C     |\n",
+      "|     Mean     |        1.2         |         3.57        | 4.01 |    C     |\n",
+      "|      L       | 0.5319230405352436 | 0.08627731882651153 | 0.25 |    A     |\n",
+      "+--------------+--------------------+---------------------+------+----------+\n",
       "\n"
      ]
     }
